[tool.poetry]
name = "sistema-unico-tarjetas"
version = "0.1.0"
description = "\"Servicio Backend de registro de pagos para el transporte publico\""
authors = ["Roberto Rodriguez Eduardo <eduardororo285@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "3.6.1"
python-decouple = "3.8"
pydantic = "2.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
black = "22.12.0"
pylint = "3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
